[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pairwise-sequence-alignment"
authors = [
    {name = "Andrzej Zielezinski", email = "a.zielezinski@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12", 
]
keywords = [
    "sequence alignment",
    "nucleotide",
    "protein",
    "pairwise alignment",
    "needle",
    "water",
    "emboss",
]
requires-python = ">=3.8"
dynamic = ["version", "description"]

[tool.flit.module]
name = "psa"

[project.urls]
Documentation = "https://github.com/aziele/pairwise-sequence-alignment"
Source = "https://github.com/aziele/pairwise-sequence-alignment"